<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBg"
    tools:context="com.seven.zion.numberfacts.RandomFacts">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Yfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_replay_white_24dp" />

    <EditText
        android:id="@+id/Yrnum"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/Yresp"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:text="@string/enter_some_value"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="27sp"
            android:textStyle="italic" />
    </ScrollView>

    <Button
        android:id="@+id/Yrbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:text="@string/search"
        android:textColor="@color/ButtonColor"
        tools:text="Search" />

    <com.seven.zion.numberfacts.DigitTextView
        android:id="@+id/YdigitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginStart="115dp"
        android:visibility="gone"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/counterY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/counter_bg"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</FrameLayout>
